--- a/madurativas/Web.config
+++ b/madurativas/Web.config
@@ -37,6 +37,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="ALLOWALL"/>
+      </customHeaders>
+    </httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
