--- a/madurativas/Web.config
+++ b/madurativas/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=localhost;Port=5432;Database=madurativas;User Id=erx;Password=erx;" providerName="Npgsql" />
-    <add name="madurativasEntities" connectionString="metadata=res://*/madurativaModel.csdl|res://*/madurativaModel.ssdl|res://*/madurativaModel.msl;provider=Npgsql;provider connection string=&quot;Host=localhost;Port=5432;Database=madurativas;Username=erx;Password=erx;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Server=localhost;Port=5432;Database=madurativas_test;User Id=erx;Password=erx;" providerName="Npgsql" />
+    <add name="madurativasEntities" connectionString="metadata=res://*/madurativaModel.csdl|res://*/madurativaModel.ssdl|res://*/madurativaModel.msl;provider=Npgsql;provider connection string=&quot;Host=localhost;Port=5432;Database=madurativas_test;Username=erx;Password=erx;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
     <!--
     <add name="DefaultConnection" connectionString="Server=localhost;Port=5433;Database=madurativas;User Id=postgres;Password=123456;" providerName="Npgsql"/>
     <add name="madurativasEntities" connectionString="metadata=res://*/madurativaModel.csdl|res://*/madurativaModel.ssdl|res://*/madurativaModel.msl;provider=Npgsql;provider connection string=&quot;Host=localhost;Port=5433;Database=madurativas;Username=postgres;Password=123456;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />-->
